Remove Streams from concept methods (#6289)
## What is the goal of this PR?
We almost entirely remove usages of java's `Stream` class from our internal code, replacing it with our own `FunctionalIterator`. We entirely remove Streams from method signatures.

We still use streams occasionaly when requiring:
* sorting
* collecting to an array (instead of a list)
* `Streams.compareSize`

## What are the changes implemented in this PR?
* Remove `Stream` from `//concept`, and propagate the changes upwards. This happens to remove almost all usage of Stream